// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > match checkbox snapshot 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <label
      class="flex items-center gap-2 cursor-pointer"
    >
      <input
        class="w-4 h-4 relative bg-white border border-slate-300 rounded outline-none flex items-center justify-center hover:bg-blue-50 hover:border-blue-600 active:border-blue-300 active:shadow-[0px_0px_0px_2px_rgb(219,234,254)] focus:border-blue-300 focus:shadow-[0px_0px_0px_2px_rgb(219,234,254)] disabled:!bg-slate-100 disabled:!border-slate-200"
        type="checkbox"
      />
      <span
        class="text-slate-700 text-sm font-medium leading-tight"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox > match disabled snapshot 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <label
      class="flex items-center gap-2 cursor-pointer"
    >
      <input
        class="w-4 h-4 relative bg-white border border-slate-300 rounded outline-none flex items-center justify-center hover:bg-blue-50 hover:border-blue-600 active:border-blue-300 active:shadow-[0px_0px_0px_2px_rgb(219,234,254)] focus:border-blue-300 focus:shadow-[0px_0px_0px_2px_rgb(219,234,254)] disabled:!bg-slate-100 disabled:!border-slate-200"
        disabled=""
        type="checkbox"
      />
      <span
        class="text-sm font-medium leading-tight text-slate-300"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox > match indeterminate snapshot 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <label
      class="flex items-center gap-2 cursor-pointer"
    >
      <input
        class="w-4 h-4 relative bg-white border border-slate-300 rounded outline-none flex items-center justify-center hover:bg-blue-50 hover:border-blue-600 active:border-blue-300 active:shadow-[0px_0px_0px_2px_rgb(219,234,254)] focus:border-blue-300 focus:shadow-[0px_0px_0px_2px_rgb(219,234,254)] disabled:!bg-slate-100 disabled:!border-slate-200"
        type="checkbox"
      />
      <span
        class="text-slate-700 text-sm font-medium leading-tight"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox > match radio snapshot 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <label
      class="flex items-center gap-2 cursor-pointer"
    >
      <input
        class="w-4 h-4 relative bg-white border border-slate-300 outline-none flex items-center justify-center hover:bg-blue-50 hover:border-blue-600 active:border-blue-300 active:shadow-[0px_0px_0px_2px_rgb(219,234,254)] focus:border-blue-300 focus:shadow-[0px_0px_0px_2px_rgb(219,234,254)] disabled:!bg-slate-100 disabled:!border-slate-200 rounded-full"
        type="radio"
      />
      <span
        class="text-slate-700 text-sm font-medium leading-tight"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;
